--- a/src/app.html
+++ b/src/app.html
@@ -1,29 +1,12 @@
-<!DOCTYPE html>
-<html lang="en" prefix="og: https://ogp.me/ns#">
-  <head>
-    <meta charset="utf-8" />
-    <title>svelte-zdog</title>
-    <meta name="description" content="svelte components for zdog 3D renders" />
-    <link rel="manifest" href="%sveltekit.assets%/manifest.json" />
-    <link rel="shortcut icon" href="%sveltekit.assets%/favicon.ico" />
-    <meta name="theme-color" content="#fbbf24" />
-    <meta
-      name="viewport"
-      content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="svelte-zdog" />
-    <meta property="og:image" content="%sveltekit.assets%/og.png" />
-    <meta property="og:url" content="https://carlos-aguilar.com/svelte-zdog/" />
-    <meta
-      property="og:description"
-      content="svelte components for zdog 3D renders"
-    />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:creator" content="@wh0am1_dev" />
-    %sveltekit.head%
-  </head>
-  <body data-sveltekit-preload-data="hover">
-    <div style="display: contents">%sveltekit.body%</div>
-  </body>
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		%sveltekit.head%
+	</head>
+	<body data-sveltekit-preload-data="hover">
+		<div>%sveltekit.body%</div>
+	</body>
 </html>
